sequelize.close())
[eval]:1
const { sequelize } = require('./src/config/database'); sequelize.query('SELECT * FROM Cards WHERE userId IN (SELECT id FROM Users WHERE email=\'gonza@gmail.com\') AND name LIKE \'%Diamante mox%\'').then(([results]) =, null, 2))).catch(err =;
                                                                                                                                                                                                            ^^^^^^^^^^^

SyntaxError: Invalid left-hand side in assignment
[90m    at new Script (node:vm:100:7)[39m
[90m    at createScript (node:vm:265:10)[39m
[90m    at Object.runInThisContext (node:vm:313:10)[39m
[90m    at node:internal/process/execution:79:19[39m
    at [eval]-wrapper:6:22
[90m    at evalScript (node:internal/process/execution:78:60)[39m
[90m    at node:internal/main/eval_string:27:3[39m
